mavensmate/Google Maps/src/objects/Course_Detail__c.object
<CustomObject>
    <description>Specs for courses owned by customers</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Course_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Addition_Year__c</fullName>
        <label>Addition Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additions__c</fullName>
        <description>Add detail abut the additions made to the course.  If any of the values above such as the number of elements or poles change adjust all of those values as well.</description>
        <inlineHelpText>Add detail abut the additions made to the course.  If any of the values above such as the number of elements or poles change adjust all of those values as well.</inlineHelpText>
        <label>Additions</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Add any information here that you feel is relevant and not captured in the fields above.</description>
        <inlineHelpText>Add any information here that you feel is relevant and not captured in the fields above.</inlineHelpText>
        <label>Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliancy__c</fullName>
        <label>Compliancy</label>
        <picklist>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Hex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L Shaped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horseshoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Installation__c</fullName>
        <description>Who installed the course</description>
        <label>Course Installation</label>
        <picklist>
            <picklistValues>
                <fullName>Ropes Courses Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ropes Courses Supervised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party Install</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Parent</label>
        <picklist>
            <picklistValues>
                <fullName>RCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovative Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faszinatour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ride Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Play</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faux_Painted__c</fullName>
        <label>Faux Painted</label>
        <picklist>
            <picklistValues>
                <fullName>Columns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Harness_Type__c</fullName>
        <label>Harness Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Creek</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_ID__c</fullName>
        <label>Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(Image_ID__c !=null, IMAGE(&apos;/sfc/servlet.shepherd/version/download/&apos; &amp; Image_ID__c, &apos;&apos;), IMAGE(&apos;&apos;,&apos;&apos;,0,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inclines_Per_Level__c</fullName>
        <label>Entrances Per Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indoors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indoors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jr_Harnesses__c</fullName>
        <label>Jr Harnesses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lanyard_Color__c</fullName>
        <label>Lanyard Color</label>
        <picklist>
            <picklistValues>
                <fullName>Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lanyard_Quantity__c</fullName>
        <label>Lanyard Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lanyard_Type__c</fullName>
        <label>Lanyard Type</label>
        <picklist>
            <picklistValues>
                <fullName>RSA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA2 Dual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolt with Webbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolt with Rope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Large_Harnesses__c</fullName>
        <label>Large Harnesses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Indoors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medium_Harnesses__c</fullName>
        <label>Medium Harnesses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Zip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouldering Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climbing Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Zipline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Low Elements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability High Elements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail Navigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail Explorer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail Voyager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail Expedition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Tykes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail Endeavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track-n-Trail Steel Pole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teams Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Ropes Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangle Duo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pamper Pole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climbing Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Ropes Instructor Belay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Playpen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Ropes Self Belay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40&apos; Skyscraper Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50&apos; Skyscraper Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable Sky Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk an I-Beam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Elements__c</fullName>
        <label>Number of Elements</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inclines__c</fullName>
        <label>Number of Inclines</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Levels__c</fullName>
        <label>Number of Levels</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Poles__c</fullName>
        <label>Number of Poles</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator_Lanyard_Quantity__c</fullName>
        <label>Operator Lanyard Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outdoors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outdoors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paint_Color_1__c</fullName>
        <label>Column Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Color_2__c</fullName>
        <label>Overhead Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Color_3__c</fullName>
        <label>Platform Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Type__c</fullName>
        <label>Paint Type</label>
        <picklist>
            <picklistValues>
                <fullName>Devthane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <description>Name of the team lead or person supervising install.  If you know this information for the 3ed Party or Customer add this information as well.</description>
        <inlineHelpText>Name of the team lead or person supervising install.  If you know this information for the 3ed Party or Customer add this information as well.</inlineHelpText>
        <label>Person Responsible</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plumber__c</fullName>
        <label>Plumber</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rope__c</fullName>
        <label>Rope</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SliderAssembly__c</fullName>
        <label>Slider Assembly</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Theming__c</fullName>
        <label>Theming</label>
        <length>164</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Large_Harnesses__c</fullName>
        <label>X-Large Harnesses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <picklist>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All_Courses</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Model__c</columns>
        <columns>Status__c</columns>
        <columns>Distributor__c</columns>
        <columns>Year_Built__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Number_of_Elements__c</columns>
        <columns>Number_of_Levels__c</columns>
        <columns>Number_of_Inclines__c</columns>
        <columns>Number_of_Poles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Courses</label>
    </listViews>
    <nameField>
        <label>Job Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>